ingressControlerr/bluesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluesvc
spec:
  selector:
    app: blue-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
