ingressControlerr/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greendeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: greenapp
        image: devopswithcloudhub/nginx:blue
---
apiVersion: v1
kind: Service
metadata:
  name: greensvc
spec:
  selector:
    app: green-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
