ingressControlerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firstingress
  annotations: 
   kubernetes.io/ingress.class : "gce"
spec:
 defaultBackend:
   service:
    name: bluesvc
    port:
     number: 80
